--- a/desktop.html
+++ b/desktop.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>ReactDesktop Examples</title>
+    <title>desktop.css Examples</title>
     <link type="text/css" rel="stylesheet" href="./dist/desktop.css">
   </head>
   <body>
