--- a/desktop.html
+++ b/desktop.html
@@ -69,7 +69,16 @@
                       </div>
                       <div class="content">
                           <div class="tab-content active" style="padding: 20px;">
-                              contents1
+                              <div class="accordion">
+                                  <div class="title"><i class="icon angle right"></i>title here</div>
+                                  <div class="content">
+                                      <p>The last two years have been rough on Samsung,
+                                          which makes some of the most popular smartphones
+                                          in the world but hasn't managed lately to scoop up
+                                          the same profits as competitor Apple, whose
+                                          iPhones remain the benchmark for the industry.</p>
+                                  </div>
+                              </div>
                           </div>
                           <div class="tab-content" style="padding: 20px;">
                               contents2
