--- a/desktop.html
+++ b/desktop.html
@@ -70,8 +70,18 @@
                       <div class="content">
                           <div class="tab-content active" style="padding: 20px;">
                               <div class="accordion">
-                                  <div class="title"><i class="icon angle right"></i>title here</div>
+                                  <div class="title"><i class="caret right icon"></i>title here</div>
                                   <div class="content">
+                                      <p>The last two years have been rough on Samsung,
+                                          which makes some of the most popular smartphones
+                                          in the world but hasn't managed lately to scoop up
+                                          the same profits as competitor Apple, whose
+                                          iPhones remain the benchmark for the industry.</p>
+                                  </div>
+                              </div>
+                              <div class="accordion">
+                                  <div class="title"><i class="caret down icon"></i>title here</div>
+                                  <div class="content active">
                                       <p>The last two years have been rough on Samsung,
                                           which makes some of the most popular smartphones
                                           in the world but hasn't managed lately to scoop up
