--- a/desktop.html
+++ b/desktop.html
@@ -18,6 +18,7 @@
               <button>Basic Button</button>
               <button>Mini</button>
               <button>中文</button>
+              <button><i class="zoom icon"></i></button>
               <select>
                   <option>Choose...</option>
                   <option>Option A</option>
@@ -26,7 +27,7 @@
                   <option>Option A</option>
               </select>
               <div class="label">Label</div>
-
+              <div class="label"><i class="zoom icon"></i></div>
               <div class="label active">Actived Label in Toolbar</div>
           </div>
           <div class="content" style="background: #707070; padding: 20px;">
