--- a/desktop.html
+++ b/desktop.html
@@ -137,6 +137,54 @@
                   <div class="item">item3</div>
                   <div class="item">item3</div>
               </div>
+              <div class="tree" style="float: left; margin-left: 20px; border: 1px solid #333; min-width: 200px; min-height: 400px;">
+                  <div class="tree-node">
+                    <div class="content">
+                      <i class="angle down icon"></i><span>item0</span>
+                    </div>
+                    <div class="list children">
+                        <div class="tree-node">
+                          <div class="content">
+                            <i class="angle right icon"></i><span>item1</span>
+                          </div>
+                          <div class="list children">
+
+                          </div>
+                        </div>
+                        <div class="tree-node selected">
+                          <div class="content">
+                            <i class="angle down icon"></i><span>item1</span>
+                          </div>
+                          <div class="list children">
+                              <div class="tree-node">
+                                <div class="content">
+                                  <i class="angle right icon"></i><span>item1</span>
+                                </div>
+                                <div class="list children">
+
+                                </div>
+                              </div>
+                              <div class="tree-node">
+                                <div class="content">
+                                  <i class="angle right icon"></i><span>item1</span>
+                                </div>
+                                <div class="list children">
+
+                                </div>
+                              </div>
+                          </div>
+                        </div>
+                        <div class="tree-node">
+                          <div class="content">
+                            <i class="angle right icon"></i><span>item1</span>
+                          </div>
+                          <div class="list children">
+
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+              </div>
               <div style="clear: both;"></div>
           </div>
       </div>
