add button group

--- a/desktop.html
+++ b/desktop.html
@@ -185,6 +185,14 @@
                     </div>
                   </div>
               </div>
+              <div class="advance" style="padding: 20px; float: left; margin-left: 20px; border: 1px solid #333; min-width: 200px; min-height: 400px; box-sizing: border-box;">
+                  <div class="button-group">
+                      <button><i class="step backward icon"></i></button>
+                      <button><i class="play icon"></i></button>
+                      <button><i class="pause icon"></i></button>
+                      <button><i class="step forward icon"></i></button>
+                  </div>
+              </div>
               <div style="clear: both;"></div>
           </div>
       </div>
