update menu style

--- a/desktop.html
+++ b/desktop.html
@@ -128,7 +128,7 @@
                       </div>
                   </div>
               </div>
-              <div class="menu" style="float: left; margin-left: 20px;">
+              <div class="menu" style="float: left; margin-left: 20px; position: relative;">
                   <div class="item"><i class="toggle right icon"></i>item0</div>
                   <div class="item">item1</div>
                   <div class="item">item2</div>
@@ -140,12 +140,12 @@
               <div class="tree" style="float: left; margin-left: 20px; border: 1px solid #333; min-width: 200px; min-height: 400px;">
                   <div class="tree-node">
                     <div class="content">
-                      <i class="angle down icon"></i><span>item0</span>
+                      <i class="caret down icon"></i><span>item0</span>
                     </div>
                     <div class="list children">
                         <div class="tree-node">
                           <div class="content">
-                            <i class="angle right icon"></i><span>item1</span>
+                            <i class="caret right icon"></i><span>item1</span>
                           </div>
                           <div class="list children">
 
@@ -153,12 +153,12 @@
                         </div>
                         <div class="tree-node selected">
                           <div class="content">
-                            <i class="angle down icon"></i><span>item1</span>
+                            <i class="caret down icon"></i><span>item1</span>
                           </div>
                           <div class="list children">
                               <div class="tree-node">
                                 <div class="content">
-                                  <i class="angle right icon"></i><span>item1</span>
+                                  <i class="caret right icon"></i><span>item1</span>
                                 </div>
                                 <div class="list children">
 
@@ -166,7 +166,7 @@
                               </div>
                               <div class="tree-node">
                                 <div class="content">
-                                  <i class="angle right icon"></i><span>item1</span>
+                                  <i class="caret right icon"></i><span>item1</span>
                                 </div>
                                 <div class="list children">
 
@@ -176,7 +176,7 @@
                         </div>
                         <div class="tree-node">
                           <div class="content">
-                            <i class="angle right icon"></i><span>item1</span>
+                            <i class="caret right icon"></i><span>item1</span>
                           </div>
                           <div class="list children">
 
