add progress style

--- a/desktop.html
+++ b/desktop.html
@@ -17,6 +17,7 @@
           <div class="toolbar">
               <button>Basic Button</button>
               <button>Mini</button>
+              <button class="active">Actived</button>
               <button>中文</button>
               <button><i class="zoom icon"></i></button>
               <select>
@@ -191,6 +192,23 @@
                       <button><i class="play icon"></i></button>
                       <button><i class="pause icon"></i></button>
                       <button><i class="step forward icon"></i></button>
+                  </div>
+                  <div style="padding: 10px;">
+                      <div class="progress small" style="width: 100px;">
+                          <div class="value" style="width: 31%;"></div>
+                      </div>
+                      <br/><br/>
+                      <div class="progress" style="width: 100px;">
+                          <div class="value" style="width: 31%;"></div>
+                      </div>
+                      <br/><br/>
+                      <div class="progress large" style="width: 100px;">
+                          <div class="value" style="width: 31%;">31%</div>
+                      </div>
+                      <br/><br/>
+                      <div class="progress extra" style="width: 100px;">
+                          <div class="value" style="width: 31%;">31%</div>
+                      </div>
                   </div>
               </div>
               <div style="clear: both;"></div>
