--- a/desktop.html
+++ b/desktop.html
@@ -132,7 +132,7 @@
               <div class="menu" style="float: left; margin-left: 20px; position: relative;">
                   <div class="item"><i class="toggle right icon"></i>item0</div>
                   <div class="item">item1</div>
-                  <div class="item">item2</div>
+                  <div class="item disabled">item2 disabled</div>
                   <div class="item"><i class="file text outline icon"></i>item3</div>
                   <div class="divider"></div>
                   <div class="item">item3</div>
