--- a/desktop.html
+++ b/desktop.html
@@ -136,7 +136,17 @@
                   <div class="item"><i class="file text outline icon"></i>item3</div>
                   <div class="divider"></div>
                   <div class="item">item3</div>
-                  <div class="item">item3</div>
+                  <div class="item group">item3
+                      <div class="menu">
+                          <div class="item"><i class="toggle right icon"></i>item0</div>
+                          <div class="item">item1</div>
+                          <div class="item disabled">item2 disabled</div>
+                          <div class="item"><i class="file text outline icon"></i>item3</div>
+                          <div class="divider"></div>
+                          <div class="item">item3</div>
+                          <div class="item">item3</div>
+                      </div>
+                  </div>
               </div>
               <div class="tree" style="float: left; margin-left: 20px; border: 1px solid #333; min-width: 200px; min-height: 400px;">
                   <div class="tree-node">
