--- a/desktop.html
+++ b/desktop.html
@@ -31,7 +31,7 @@
               <div class="label"><i class="zoom icon"></i></div>
               <div class="label active">Actived Label in Toolbar</div>
           </div>
-          <div class="content" style="background: #707070; padding: 20px;">
+          <div class="content" style="padding: 20px;">
               <div class="panel" style="float: left; height: 400px;">
                   <div class="header">panel title</div>
                   <div class="content" style="padding: 20px;">
@@ -148,7 +148,7 @@
                       </div>
                   </div>
               </div>
-              <div class="tree" style="float: left; margin-left: 20px; border: 1px solid #333; min-width: 200px; min-height: 400px;">
+              <div class="tree section" style="float: left; margin-left: 20px; min-width: 200px; min-height: 400px;">
                   <div class="tree-node">
                     <div class="content">
                       <i class="caret down icon"></i><span>item0</span>
@@ -196,7 +196,7 @@
                     </div>
                   </div>
               </div>
-              <div class="advance" style="padding: 20px; float: left; margin-left: 20px; border: 1px solid #333; min-width: 200px; min-height: 400px; box-sizing: border-box;">
+              <div class="advance section" style="padding: 20px; float: left; margin-left: 20px; min-width: 200px; min-height: 400px; box-sizing: border-box;">
                   <div class="button-group">
                       <button><i class="step backward icon"></i></button>
                       <button><i class="play icon"></i></button>
